# memory-garden

./: .gitattributes  .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_GUIDE.md  README.md  README_中文.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml  eval_case_proposal.yml  feature_request.yml  memory_policy_question.yml
.github/workflows/: tests.yml
agents/: openai.yaml
benchmarks/: __init__.py
benchmarks/comparison/: __main__.py  run_comparison.py
benchmarks/retrieval/: __init__.py  __main__.py  cases.jsonl  cases.py  dataset.py  gold_memories.json  metrics.py  report.py  (+3 more)
docs/: architecture.md  concepts.md  index.md  installation.md  integration_quickstart.md  quickstart.md
examples/: README.md  agent_brief_injection_demo.py  garden_covenant_default.yaml  garden_skill_demo.py  harvest_rerank_demo.py  sync_chat_agent.py
memory_garden/: __init__.py  __main__.py  auto.py  config.py  runtime_config.py  sdk.py  skill.py
references/: api.md  privacy-and-safety.md  storage-and-health.md  troubleshooting.md
scripts/: calibrate_weights.py  memory_garden_skill_smoke.py  real_provider_smoke.py  run_retrieval_benchmark.py
tests/: _soil_test_helpers.py  test_after_reply.py  test_agent_brief_injection_demo.py  test_ann_index.py  test_auto_memory.py  test_before_reply.py  test_candidate_source.py  test_cjk_ngram.py  test_cli.py  test_cli_adapters.py  test_cognition_models.py  test_cognition_providers.py  test_command_not_memorized.py  test_compost.py  test_conflict_service.py  test_core_flow.py  test_court_case.py  test_court_shadow.py  test_covenant_audit_status.py  test_covenant_enforcer.py  test_covenant_lab.py  test_covenant_loader.py  test_covenant_models.py  test_covenant_validator.py  test_dream_cycle.py  test_dream_reflective.py  test_e2e_sdk.py  test_forget_content_proof.py  test_forget_proof.py  test_framework_adapters.py  test_garden_harvester.py  test_garden_observer.py  test_garden_skill.py  test_garden_tick.py  test_greenhouse.py  test_harvest_bouquet.py  test_harvest_brief.py  test_harvest_collector.py  test_harvest_hybrid.py  test_harvest_models.py  (+77 more)
(+236 files in other folders)
